First test release

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Vue.js-style template engine",
     "type": "library",
     "license": "MIT",
+    "version": "0.1.0",
     "authors": [
         {
             "name": "Marcus Lewis",
