--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/expression-language": "^5.2",
         "spatie/regex": "^1.4",
         "danielstjules/stringy": "^3.1",
-        "voku/arrayy": "^7.8"
+        "voku/arrayy": "^7.8",
+        "ext-dom": "*"
     }
 }
